--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-slideshow-image": "^1.3.0",
