--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@svgr/webpack": "4.3.2",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.0.6",
@@ -37,6 +38,7 @@
     "jest-watch-typeahead": "0.4.0",
     "mdbreact": "^4.21.1",
     "mini-css-extract-plugin": "0.8.0",
+    "node": "^12.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -44,8 +46,10 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-app-polyfill": "^1.0.4",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
     "react-slideshow-image": "^1.3.0",
@@ -70,6 +74,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:8000/",
   "browserslist": {
     "production": [
       ">0.2%",
