--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-slideshow-image": "^1.3.0",
+    "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
