--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "css-loader": "2.1.1",
+    "d3-dsv": "^1.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
@@ -55,6 +56,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-slideshow-image": "^1.3.0",
+    "react-stockcharts": "^0.7.8",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
