--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
