--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.0.8",
     "react-slideshow-image": "^1.3.0",
     "react-stockcharts": "^0.7.8",
     "reactstrap": "^8.1.1",
