--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.0",
+    "mdbootstrap": "^4.9.0",
     "mdbreact": "^4.21.1",
     "mini-css-extract-plugin": "0.8.0",
     "node": "^12.13.0",
@@ -54,6 +55,7 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.10.2",
+    "react-parallax": "^3.0.0-rc2",
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
