--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "7.6.0",
     "@svgr/webpack": "4.3.2",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0",
     "axios": "^0.19.0",
@@ -40,6 +41,7 @@
     "materialize-css": "^1.0.0-rc.2",
     "mdbreact": "^4.21.1",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -47,7 +49,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.10.2",
+    "react": "^16.11.0",
     "react-app-polyfill": "^1.0.4",
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^1.0.0-beta.14",
