--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-ionicons": "^3.0.1",
     "react-parallax": "^3.0.0-rc2",
     "react-paypal-express-checkout": "^1.0.5",
+    "react-pdf": "^4.1.0",
     "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
