--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-select": "^3.0.8",
+    "react-sidebar": "^3.0.2",
     "react-slideshow-image": "^1.3.0",
     "react-stockcharts": "^0.7.8",
     "reactstrap": "^8.1.1",
