--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-sidebar": "^3.0.2",
     "react-slideshow-image": "^1.3.0",
     "react-stockcharts": "^0.7.8",
+    "react-vis": "^1.11.7",
     "reactstrap": "^8.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
